--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="color_66">#666666</color>
     <color name="color_66_33">#33666666</color>
     <color name="color_4b">#4b4b4b</color>
+    <color name="color_f5">#f5f5f5</color>
     <color name="color_4b_66">#664b4b4b</color>
     <color name="color_red">#FF0000</color>
 
