置换中心 买单卖单

--- a/zhilianyc/app/src/main/res/layout/activity_otc_marker.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_otc_marker.xml
@@ -411,6 +411,13 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/view_pop"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:layout_alignParentBottom="true"
+        />
+
 
 </RelativeLayout>
 
