--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -41,6 +41,7 @@
     <color name="color_368feb_99">#99368FEB</color>
     <color name="color_f0f0f0">#f0f0f0</color>
     <color name="color_FF4751">#FF4751</color>
+    <color name="color_FF4751_99">#99FF4751</color>
 
 <!--    背景色-->
     <color name="color_cc">#cccccc</color>
