--- a/zhilianyc/app/src/main/res/layout/activity_invitation.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_invitation.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_1"
+        android:id="@+id/tv_task_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
@@ -100,18 +100,18 @@
         android:layout_height="@dimen/dp_1"
         android:layout_marginEnd="@dimen/dp_5"
         android:background="@color/color_ededed"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_1"
-        app:layout_constraintEnd_toStartOf="@+id/tv_1"
-        app:layout_constraintTop_toTopOf="@+id/tv_1" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_task_all"
+        app:layout_constraintEnd_toStartOf="@+id/tv_task_all"
+        app:layout_constraintTop_toTopOf="@+id/tv_task_all" />
 
     <View
         android:layout_width="@dimen/dp_70"
         android:layout_height="@dimen/dp_1"
         android:layout_marginStart="@dimen/dp_5"
         android:background="@color/color_ededed"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_1"
-        app:layout_constraintStart_toEndOf="@+id/tv_1"
-        app:layout_constraintTop_toTopOf="@+id/tv_1" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_task_all"
+        app:layout_constraintStart_toEndOf="@+id/tv_task_all"
+        app:layout_constraintTop_toTopOf="@+id/tv_task_all" />
 
     <TextView
         android:id="@+id/tv_invitation_code"
@@ -125,7 +125,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_1"
+        app:layout_constraintTop_toBottomOf="@+id/tv_task_all"
         tools:text="GDREDS" />
 
 
