--- a/zhilianyc/app/src/main/res/layout/activity_my_team.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_my_team.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_180"
             android:layout_marginTop="@dimen/sp_20"
-            android:background="@drawable/bg_gradients_90_10"
+            android:background="@drawable/bg_gradients_bg_1c81e9_r10"
             app:layout_constraintEnd_toEndOf="@+id/gl_end_15"
             app:layout_constraintStart_toStartOf="@+id/gl_start_15"
             app:layout_constraintTop_toTopOf="parent" />
@@ -231,7 +231,7 @@
             app:layout_constraintTop_toBottomOf="@+id/view_card" />
 
         <TextView
-            android:id="@+id/tv_1"
+            android:id="@+id/tv_task_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
@@ -247,8 +247,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_10"
             android:textSize="@dimen/sp_16"
-            app:layout_constraintBottom_toBottomOf="@id/tv_1"
-            app:layout_constraintStart_toEndOf="@+id/tv_1"
+            app:layout_constraintBottom_toBottomOf="@id/tv_task_all"
+            app:layout_constraintStart_toEndOf="@+id/tv_task_all"
             tools:text="110" />
 
         <TextView
@@ -281,7 +281,7 @@
             android:background="@color/color_ededed"
             app:layout_constraintEnd_toEndOf="@+id/gl_end_15"
             app:layout_constraintStart_toStartOf="@+id/gl_start_15"
-            app:layout_constraintTop_toBottomOf="@+id/tv_1" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_task_all" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
