--- a/zhilianyc/app/src/main/res/layout/activity_otc_detail.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_otc_detail.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_1"
+            android:id="@+id/tv_task_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_20"
@@ -50,7 +50,7 @@
             android:text="订单状态"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
-            app:layout_constraintStart_toEndOf="@id/tv_1"
+            app:layout_constraintStart_toEndOf="@id/tv_task_all"
             app:layout_constraintTop_toTopOf="@id/view_top" />
 
         <TextView
@@ -61,8 +61,8 @@
             android:text="2134654654"
             android:textColor="@color/white_66"
             android:textSize="@dimen/sp_12"
-            app:layout_constraintStart_toStartOf="@id/tv_1"
-            app:layout_constraintTop_toBottomOf="@+id/tv_1" />
+            app:layout_constraintStart_toStartOf="@id/tv_task_all"
+            app:layout_constraintTop_toBottomOf="@+id/tv_task_all" />
 
         <View
             android:id="@+id/view_top_line"
