--- a/zhilianyc/app/src/main/res/layout/activity_otc_feedback.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_otc_feedback.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
+        app:layout_constraintBottom_toBottomOf="@id/line_img"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/white"/>
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_5"
-        android:text="(1/500)"
+        android:text="(1/100)"
         android:textColor="@color/color_cc"
         android:textSize="@dimen/sp_12"
         app:layout_constraintBottom_toBottomOf="@id/view_title"
@@ -79,7 +79,7 @@
         android:lines="6"
         android:paddingTop="@dimen/dp_10"
         android:paddingBottom="@dimen/dp_10"
-        android:maxLength="500"
+        android:maxLength="100"
         app:layout_constraintEnd_toEndOf="@id/gl_end_15"
         android:lineSpacingExtra="@dimen/dp_5"
         app:layout_constraintStart_toStartOf="@id/gl_start_15"
@@ -88,13 +88,28 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:overScrollMode="never"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_80"
         app:layout_constraintStart_toStartOf="@id/gl_start_15"
         app:layout_constraintTop_toBottomOf="@+id/et_content"
-        app:layout_constraintEnd_toEndOf="@id/gl_end_15"
         android:orientation="vertical"/>
+
+    <ImageView
+        android:id="@+id/iv_camera"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
+        android:src="@mipmap/ic_camera"
+        app:layout_constraintTop_toTopOf="@id/recycler_view"
+        app:layout_constraintStart_toEndOf="@+id/recycler_view"/>
+
+    <View
+        android:id="@+id/line_img"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_15"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
         android:id="@+id/view_phone"
@@ -102,7 +117,7 @@
         android:layout_height="@dimen/dp_50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/line_img"
         android:layout_marginTop="@dimen/sp_10"
         android:background="@color/white"/>
 
@@ -124,6 +139,9 @@
         app:layout_constraintTop_toTopOf="@id/view_phone"
         app:layout_constraintBottom_toBottomOf="@id/view_phone"
         android:layout_marginStart="@dimen/dp_80"
+        android:maxLength="11"
+        android:maxLines="1"
+        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="@+id/gl_end_15"/>
 
     <TextView
