--- a/zhilianyc/app/src/main/res/layout/activity_main.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,42 @@
         android:layout_height="match_parent"
         android:layout_above="@id/line"></FrameLayout>
 
+
+    <LinearLayout
+        android:id="@+id/ll_gif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/dp_10"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:orientation="vertical"
+        android:layout_above="@id/line">
+
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="岳麓区"
+            android:drawablePadding="@dimen/dp_5"
+            android:textSize="@dimen/sp_18"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:drawableStart="@mipmap/ic_address3"/>
+
+        <ImageView
+            android:id="@+id/iv_poster"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="@dimen/dp_10"
+            android:src="@mipmap/ic_banner"/>
+
+        <ImageView
+            android:id="@+id/iv_gif"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_50"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_banner"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
