--- a/zhilianyc/app/src/main/res/layout/activity_main.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:padding="@dimen/dp_10"
         android:visibility="gone"
         tools:visibility="visible"
+        android:background="@color/white"
         android:orientation="vertical"
         android:layout_above="@id/line">
 
@@ -47,19 +48,21 @@
             android:gravity="center_vertical"
             android:drawableStart="@mipmap/ic_address3"/>
 
-        <ImageView
+        <com.youth.banner.Banner
             android:id="@+id/iv_poster"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/dp_180"
             android:layout_marginTop="@dimen/dp_10"
-            android:src="@mipmap/ic_banner"/>
+            tools:src="@mipmap/ic_banner"/>
 
         <ImageView
             android:id="@+id/iv_gif"
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/dp_50"
+            android:layout_marginTop="@dimen/dp_10"
+            android:scaleType="fitCenter"
             android:layout_height="match_parent"
-            android:src="@mipmap/ic_banner"/>
+            android:layout_marginBottom="@dimen/dp_10"
+            tools:src="@mipmap/ic_banner"/>
 
     </LinearLayout>
 
