--- a/zhilianyc/app/src/main/res/layout/dialog_edit.xml
+++ b/zhilianyc/app/src/main/res/layout/dialog_edit.xml
@@ -13,14 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="提示"
-        android:padding="@dimen/dp_15"
+        android:padding="@dimen/dp_16"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="@dimen/sp_20"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:background="@color/color_4b_66"/>
 
 
     <EditText
@@ -32,45 +28,55 @@
         android:hint="请输入"
         android:padding="@dimen/dp_15"
         android:scrollbars="vertical"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginEnd="@dimen/dp_15"
         android:maxLines="1"
-        android:gravity="center_vertical"/>
+        android:gravity="center"/>
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginEnd="@dimen/dp_15"
         android:background="@color/color_4b_66"/>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp_300"
         android:layout_height="@dimen/dp_60"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/btn_cancel"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_40"
             android:layout_weight="1"
-            android:background="@drawable/button_select"
+            android:background="@drawable/btn_0_cc_r40"
             android:text="取消"
+            android:layout_marginStart="@dimen/dp_20"
+            android:textColor="@color/color_99"
+            android:layout_marginEnd="@dimen/dp_10"
             android:gravity="center"/>
-
-        <View
-            android:layout_width="@dimen/dp_1"
-            android:layout_height="match_parent"
-            android:background="@color/color_4b_66"/>
 
         <TextView
             android:id="@+id/btn_submit"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:layout_height="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_10"
             android:layout_weight="1"
-            android:background="@drawable/button_select"
+            android:background="@drawable/bg_gradients_btn_368feb"
+            android:textColor="@color/white"
             android:text="确定"
             android:gravity="center"/>
 
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"/>
 
 </LinearLayout>
