--- a/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
+++ b/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
@@ -107,10 +107,13 @@
 
     <TextView
         android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@null"
         android:hint="请选择所在地址"
+        app:layout_constraintEnd_toEndOf="@+id/gl_end_15"
+        android:layout_marginEnd="@dimen/dp_35"
+        tools:text="请选择所在地址请选择所在地址请选择所在地址请选择所在地址"
         app:layout_constraintBottom_toBottomOf="@+id/view_address"
         app:layout_constraintStart_toStartOf="@+id/gl_start_120"
         app:layout_constraintTop_toTopOf="@+id/view_address" />
