--- a/zhilianyc/app/src/main/res/layout/activity_splash.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/dp_80"
         android:src="@mipmap/default_head" />
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv"
+        android:layout_marginTop="@dimen/sp_20"
+        android:textSize="@dimen/sp_18"
+        android:text="智链云仓"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="欢迎您使用智链云仓的服务"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/dp_40"
+        android:textSize="@dimen/sp_16"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
