--- a/zhilianyc/app/src/main/res/drawable/thumb1.xml
+++ b/zhilianyc/app/src/main/res/drawable/thumb1.xml
@@ -3,6 +3,6 @@
     <size
         android:width="28dp"
         android:height="28dp" />
-    <solid android:color="#e27a1e"/>
+    <solid android:color="@color/color_368feb"/>
     <corners android:radius="14dp"/>
 </shape>
