--- a/zhilianyc/app/src/main/res/layout/dialog_verify.xml
+++ b/zhilianyc/app/src/main/res/layout/dialog_verify.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/dp_300"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/container_backgroud"
