--- a/zhilianyc/app/src/main/res/layout/activity_splash.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_splash.xml
@@ -7,15 +7,15 @@
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/dp_80"
-        android:src="@mipmap/default_head" />
+        android:src="@mipmap/ic_logo" />
 
     <TextView
         android:id="@+id/tv"
