发送验证码

--- a/zhilianyc/app/src/main/res/layout/item_my_team.xml
+++ b/zhilianyc/app/src/main/res/layout/item_my_team.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_logo" />
+        tools:src="@mipmap/default_head" />
 
     <TextView
         android:id="@+id/tv_name"
