--- a/zhilianyc/app/src/main/res/layout/activity_account.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_account.xml
@@ -56,7 +56,7 @@
         android:id="@+id/iv_head"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
-        tools:src="@mipmap/ic_logo"
+        tools:src="@mipmap/default_head"
         app:layout_constraintTop_toTopOf="@id/view_head"
         app:layout_constraintBottom_toBottomOf="@id/view_head"
         app:layout_constraintEnd_toEndOf="@id/gl_end_50"/>
