--- a/zhilianyc/app/src/main/res/layout/activity_login.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_60"
         android:layout_marginTop="@dimen/dp_30"
-        android:src="@mipmap/ic_logo"
+        android:src="@mipmap/ic_logo_round"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
