--- a/zhilianyc/app/src/main/res/layout/activity_splash.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/dp_80"
-        android:src="@mipmap/ic_logo" />
+        android:src="@mipmap/ic_logo_round" />
 
     <TextView
         android:id="@+id/tv"
